Lesson 2025-06-11:  virtual threads, CSP, actors